<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#512da8"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.Toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp">



                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/ic_arrow_back_white_24dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="-134dp"
                    android:src="@drawable/ic_logo" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/font_train2" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <TextView
                            android:id="@+id/destinationTextView"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="45"
                            android:fontFamily="@font/gotham"
                            android:layout_below="@+id/textView3"
                            android:orientation="vertical"
                            android:text="Destination:"
                            android:textAlignment="viewStart"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp" />


                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="10"
                            android:src="@drawable/ic_swap_horiz_white_24dp" />

                        <TextView
                            android:id="@+id/departEditText"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="45"
                            android:fontFamily="@font/gotham"
                            android:layout_below="@+id/destinationTextView"
                            android:text="From:"
                            android:textAlignment="viewStart"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp" />


                    </LinearLayout>

                    <TextView
                        android:id="@+id/dateTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/linearLayout"
                        android:layout_marginTop="8dp"
                        android:fontFamily="#000000"
                        android:text="Date:"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </RelativeLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="60"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="@string/date1"
                                android:textColor="#000000"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:layout_marginBottom="4dp"
                                android:fontFamily="@font/calibri"
                                android:text="@string/direct_ter1"
                                android:textColor="#4b4b4b"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="2h07"
                                android:textColor="#8a8a8a" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="40"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="@string/prix_1"
                                android:textAlignment="textEnd"
                                android:textColor="@color/colorPrimary"
                                android:textSize="24sp"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="60"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="@string/date_2"
                                android:textColor="#000000"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:layout_marginBottom="4dp"
                                android:fontFamily="@font/calibri"
                                android:text="@string/direct_ter2"
                                android:textColor="#4b4b4b"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="@string/temps"
                                android:textColor="#8a8a8a" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="40"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="@string/prix_2"
                                android:textAlignment="textEnd"
                                android:textColor="@color/colorPrimary"
                                android:textSize="24sp"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="60"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="@string/date_3"
                                android:textColor="#000000"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:layout_marginBottom="4dp"
                                android:fontFamily="@font/calibri"
                                android:text="@string/direct_ter3"
                                android:textColor="#4b4b4b"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="@string/temps_3"
                                android:textColor="#8a8a8a" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="40"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="@string/prix_3"
                                android:textAlignment="textEnd"
                                android:textColor="@color/colorPrimary"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
